--- a/main.html
+++ b/main.html
@@ -1,1 +1,6 @@
-<h1> Hello </h1>
+<HTML DOCTYPE!>
+  <head><title> Introduction to HTML, CSS, and JS </title></head>
+  <body>
+    <h1> Hello </h1>
+  </body>
+  </html>
